--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/brands.css" integrity="sha384-BKw0P+CQz9xmby+uplDwp82Py8x1xtYPK3ORn/ZSoe6Dk3ETP59WCDnX+fI1XCKK" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/fontawesome.css" integrity="sha384-4aon80D8rXCGx9ayDt85LbyUHeMWd3UiBaWliBlJ53yzm9hqN21A+o1pqoyK04h+" crossorigin="anonymous">
 
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/img/favicon/site.webmanifest">
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Serif:400,700" rel="stylesheet">
-  <!-- Plugin CSS -->
-  <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="css/creative.css" rel="stylesheet">
@@ -57,10 +61,11 @@
   </nav>
 
   <!-- Masthead -->
-  <header class="masthead">
+  <header class="masthead" data-parallax="scroll" data-image-src="/img/bg-masthead.jpg">
     <div class="container h-100">
-      <div class="row h-100 align-items-center justify-content-center text-center">
+      <div class="row h-100 "> <!-- align-items-center justify-content-center text-center -->
         <div class="col-lg-10 align-self-end">
+<!--            <img src="img/logo/logo-white-full.png" width="500">-->
           <h1 class="text-white">
             Your Drinks<br />
             Deserve <img src="img/logo/logo-text-white.png" height="40" class="logo" alt="Better Bitters"><br />
@@ -77,7 +82,8 @@
   <section class="page-section" id="about">
     <div class="container-fluid min-vh-100">
       <div class="row min-vh-100">
-        <div class="col-lg-4 px-0 py-5 info info1">
+
+          <div class="col-lg-6 col-xl-4 px-0 py-5 info info1">
           <div class="row my-5 py-5">
             <div class="inner offset-4 col-6">
               <h2>John<br />Smith</h2>
@@ -93,7 +99,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 text-center px-0 py-5 info info2">
+        <div class="col-lg-6 col-xl-4 text-center px-0 py-5 info info2">
 
           <div class="row my-1 py-5">
             <div class="inner offset-1 col-10">
@@ -108,7 +114,7 @@
           </div>
 
         </div>
-        <div class="col-lg-4 text-center info info3 align-middle">
+        <div class="col-lg-4 d-none d-xl-block text-center info info3 align-middle">
           <div class="row h-100">
             <div class="col-sm-12 my-auto">
               <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Get Now</a>
@@ -119,7 +125,7 @@
     </div>
   </section>
 
-  <section class="page-section pt-3" id="bitter-divider">
+  <section class="page-section bitter-divider pt-3">
     <div class="py-5 align-items-center justify-content-center text-center">
       <h2>
         Discover our Selection<br />
@@ -191,10 +197,11 @@
           </div>
 
         </div>
+      </div>
     </div>
   </section>
 
-  <section id="portfolio">
+  <section class="ingredients">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-3 col-sm-6 align-items-center justify-content-center text-center my-auto">
@@ -244,7 +251,7 @@
     </div>
   </section>
 
-  <section class="page-section pt-3" id="bitter-divider">
+  <section class="page-section bitter-divider pt-3">
     <div class="py-5 align-items-center justify-content-center text-center">
       <h2>
         Discover our Selection<br />
@@ -253,8 +260,7 @@
     </div>
   </section>
 
-
-  <section class="page-section bitter" id="bitter-1">
+  <section class="page-section bitter" id="bitter-2">
     <div class="container-fluid min-vh-100">
       <div class="row min-vh-100">
         <div class="col-lg-3 map align-items-center justify-content-center text-center pt-5">
@@ -317,10 +323,11 @@
           </div>
 
         </div>
+      </div>
     </div>
   </section>
 
-  <section id="portfolio">
+  <section class="ingredients">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-3 col-sm-6 align-items-center justify-content-center text-center my-auto">
@@ -375,7 +382,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center py-5">
-          <img src="img/logo/logo-full-black.svg" class="logo" alt="Better Bitters Logo" width="300" height="300" ><br />
+          <img src="img/logo/logo-circle.png" class="logo" alt="Better Bitters Logo" width="300" height="300" ><br />
           <img src="img/divider.png" alt=""><br />
         </div>
       </div>
@@ -402,9 +409,9 @@
 
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-  <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
   <!-- Custom scripts for this template -->
+  <script src="js/parallax.min.js"></script>
   <script src="js/creative.min.js"></script>
 
 </body>
