--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+            <a class="nav-link js-scroll-trigger" href="#bitters">Bitters</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+            <a class="nav-link js-scroll-trigger" href="/recipes.html">Recipes</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -117,7 +117,7 @@
         <div class="col-lg-4 d-none d-xl-block text-center info info3 align-middle">
           <div class="row h-100">
             <div class="col-sm-12 my-auto">
-              <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Get Now</a>
+              <a class="btn btn-light btn-xl js-scroll-trigger" href="#bitters">Buy Now</a>
             </div>
           </div>
         </div>
@@ -125,7 +125,7 @@
     </div>
   </section>
 
-  <section class="page-section bitter-divider pt-3">
+  <section class="page-section bitter-divider pt-3" id="bitters">
     <div class="py-5 align-items-center justify-content-center text-center">
       <h2>
         Discover our Selection<br />
