--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/fontawesome.css" integrity="sha384-4aon80D8rXCGx9ayDt85LbyUHeMWd3UiBaWliBlJ53yzm9hqN21A+o1pqoyK04h+" crossorigin="anonymous">
 
   <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/img/favicon/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="img/favicon/site.webmanifest">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Serif:400,700" rel="stylesheet">
@@ -61,7 +61,7 @@
   </nav>
 
   <!-- Masthead -->
-  <header class="masthead" data-parallax="scroll" data-image-src="/img/bg-masthead.jpg">
+  <header class="masthead" data-parallax="scroll" data-image-src="img/bg-masthead.jpg">
     <div class="container h-100">
       <div class="row h-100 "> <!-- align-items-center justify-content-center text-center -->
         <div class="col-lg-10 align-self-end">
