--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
           <div class="row pt-5">
             <div class="col-md-5">
-              <img src="img/products/bottle-2.png" width="500" height="567" alt="">
+              <img src="img/products/bottle-2.png" class="img-fluid" alt="">
             </div>
             <div class="col-md-6 px-5">
               <h2 class="mb-3">A Modern Classic</h2>
