--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 text-center py-5">
-                <img src="img/logo/logo-circle.png" class="logo" alt="Better Bitters Logo" width="300"
+                <img src="img/logo/logo-circle.png" class="logo img-fluid" alt="Better Bitters Logo" width="300"
                      height="300"><br/>
                 <img src="img/divider.png" alt=""><br/>
             </div>
