--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="container">
                     <div class="row my-5 py-5">
                         <div class="col" style="padding-left: 130px">
-                            <img src="img/logo/logo-text-white.png" width="249" height="50" alt="Better Bitters">
+                            <img src="img/logo/logo-text-white.png" class="img-fluid" width="249" height="50" alt="Better Bitters">
                             <hr class="colored mb-3">
                             <p class="highlighted">Your drinks deserve better</p>
                             <hr class="no-line mb-3">
