--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -31,7 +29,6 @@
 
     <!-- Theme CSS - Includes Bootstrap -->
     <link href="css/creative.css" rel="stylesheet">
-
 </head>
 
 <body id="page-top">
@@ -90,9 +87,9 @@
     <div class="container-fluid min-vh-100">
         <div class="row min-vh-100">
 
-            <div class="col-lg-6 col-xl-4 px-0 py-5 info info1 order-1 order-lg-1">
+            <div class="col-md-6 col-xl-4 px-0 py-5 info info1 order-1 order-md-1">
                 <div class="container">
-                    <div class="row my-5 py-5">
+                    <div class="row my-5 py-5 pr-3">
                         <div class="col" style="padding-left: 130px">
                             <img src="img/logo/logo-text-white.png" class="img-fluid" width="249" height="50" alt="Better Bitters">
                             <hr class="colored mb-3">
@@ -115,7 +112,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-xl-4 text-center px-0 py-5 info info2 order-3 order-lg-2">
+            <div class="col-md-6 col-xl-4 text-center px-0 py-5 info info2 order-3 order-md-2">
                 <div class="p-5">
                     <i class="fas fa-braille mb-3 heading"></i>
                     <h2 class="mb-3">Cocktail Bitters</h2>
