--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                 <div class="container">
                     <div class="row my-5 py-5 pr-3">
                         <div class="col" style="padding-left: 130px">
-                            <img src="img/logo/logo-text-white.png" class="img-fluid" width="249" height="50" alt="Better Bitters">
+                            <img src="img/logo/logo-text-white.png" class="img-fluid" width="249" height="50"
+                                 alt="Better Bitters">
                             <hr class="colored mb-3">
                             <p class="highlighted">Your drinks deserve better</p>
                             <hr class="no-line mb-3">
@@ -130,15 +131,12 @@
                         People have been using infusions and tinctures of bitter botanicals for centuries as treatments
                         for a wide range of maladies, including poor digestion, nervousness, headaches, and arthritis.
                         In the colonial period, it became common to mix healing bitters with whiskey, rum, brandy, or
-                        cognac, plus a little sugar and water, to make a sippable medicinal tonic. At least as early as
-                        1806, Americans were calling these delightful potables cock-tails. By that time, cocktails were
-                        being consumed as much (or more) for their pleasures as for their curative properties.
+                        cognac, plus a little sugar and water, to make a sippable medicinal tonic.
                     </p>
                     <p>
-                        In the nineteenth century, cocktail-slinging professional bartenders often made their own
-                        bitters from proprietary recipes. But there were also a number of popular bottled bitters on the
-                        market–a few of which survive to present day. Angostura bitters, made since 1824, were
-                        originally intended to treat stomach ailments. They are now ubiquitous behind the bar.
+                        At least as early as 1806, Americans were calling these delightful potables cocktails. By that
+                        time, cocktails were being consumed as much (or more) for their pleasures as for their curative
+                        properties.
                     </p>
                 </div>
 
