added product overview

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <i class="fas fa-braille mb-3 heading"></i>
                     <h2 class="mb-3">Cocktail Bitters</h2>
                     <h5 class="mb-3 text-muted">a little history</h5>
-                    <img class="scale-with-grid" src="img/divider-2.png" alt="divider" width="199" height="9">
+                    <img class="" src="img/divider-2.png" alt="divider" width="199" height="9">
                     <hr class="no-line mb-3">
                     <p>
                         If you’ve ever had an Old Fashioned, then you’ve had cocktail bitters. To be more specific,
@@ -143,7 +143,7 @@
                 <div class="row h-100">
                     <div class="col my-auto py-5">
                         <div class="py-5">
-                            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#bitters">Discover Our
+                            <a class="btn btn-primary btn-xl js-scroll-trigger d-md-none" href="#bitters">Discover Our
                                 Selection</a>
                         </div>
                     </div>
@@ -162,12 +162,59 @@
     </div>
 </section>
 
+<section class="page-section bitter" id="bitter-x" style="background-color: #f8f8f8">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-6 col-sm-4 offset-sm-2 offset-lg-0 col-lg-3">
+                <a class="ingredient-box js-scroll-trigger" href="#bitter-1">
+                    <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="tonka bean">
+                    <div class="ingredient-box-caption">
+                        <div class="ingredient-name text-white-50 pb-2">Szechuan Coffee</div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-6 col-sm-4 col-lg-3">
+                <a class="ingredient-box js-scroll-trigger" href="#bitter-2">
+                    <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="tonka bean">
+                    <div class="ingredient-box-caption">
+                        <div class="ingredient-name text-white-50 pb-2">Tonka Cocoa</div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-6 col-sm-4 offset-sm-2 offset-lg-0 col-lg-3">
+                <a class="ingredient-box js-scroll-trigger" href="#bitter-3">
+                    <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="tonka bean">
+                    <div class="ingredient-box-caption">
+                        <div class="ingredient-name text-white-50 pb-2">Thai Herbs</div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-6 col-sm-4 col-lg-3">
+                <a class="ingredient-box js-scroll-trigger" href="#bitter-4">
+                    <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="tonka bean">
+                    <div class="ingredient-box-caption">
+                        <div class="ingredient-name text-white-50 pb-2">Chai Curcuma</div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="page-section bitter-divider pt-3">
+    <div class="py-4 align-items-center justify-content-center text-center">
+        <h2>
+            <img src="img/divider.png" alt=""><br/>
+        </h2>
+    </div>
+</section>
+
 <section class="page-section bitter" id="bitter-1">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-3 map align-items-center justify-content-center text-center pt-5">
                 <h2 class="mb-3">Szechuan Coffee</h2>
-                <img class="scale-with-grid" src="img/divider-2.png" alt="divider" width="199" height="9">
+                <img class="" src="img/divider-2.png" alt="divider" width="199" height="9">
                 <hr class="no-line mb-5 pb-5">
             </div>
             <div class="col-lg-9 bitter align-items-center justify-content-center text-center">
@@ -178,7 +225,7 @@
                     </div>
                     <div class="col-md-6 pb-5">
                         <h2 class="mb-3">A Modern Classic</h2>
-                        <img class="scale-with-grid" src="img/divider-2.png" alt="divider" width="199" height="9">
+                        <img class="" src="img/divider-2.png" alt="divider" width="199" height="9">
                         <hr class="no-line mb-0">
                         <div class="product details">
                             <p>
@@ -229,7 +276,7 @@
         <div class="row no-gutters">
             <div class="col-lg-3 col-sm-6 align-items-center justify-content-center text-center my-auto pt-5 pb-5">
                 <h2>Highlights</h2>
-                <img class="scale-with-grid" src="img/divider-2.png" alt="divider" width="199" height="9">
+                <img class="" src="img/divider-2.png" alt="divider" width="199" height="9">
             </div>
             <div class="col-lg-3 col-sm-6">
                 <a class="ingredient-box" href="javascript:return false;">
@@ -293,7 +340,7 @@
         <div class="row">
             <div class="col-lg-3 map align-items-center justify-content-center text-center pt-5">
                 <h2 class="mb-3">Tonka Cocoa</h2>
-                <img class="scale-with-grid" src="img/divider-2.png" alt="divider" width="199" height="9">
+                <img class="" src="img/divider-2.png" alt="divider" width="199" height="9">
                 <hr class="no-line mb-5 pb-5">
             </div>
             <div class="col-lg-9 bitter align-items-center justify-content-center text-center">
@@ -304,7 +351,7 @@
                     </div>
                     <div class="col-md-6 pb-5">
                         <h2 class="mb-3">Sweet Indulgence</h2>
-                        <img class="scale-with-grid" src="img/divider-2.png" alt="divider" width="199" height="9">
+                        <img class="" src="img/divider-2.png" alt="divider" width="199" height="9">
                         <hr class="no-line mb-0">
                         <div class="product details">
                             <p>
@@ -355,7 +402,7 @@
         <div class="row no-gutters">
             <div class="col-lg-3 col-sm-6 align-items-center justify-content-center text-center my-auto pt-5 pb-5">
                 <h2>Highlights</h2>
-                <img class="scale-with-grid" src="img/divider-2.png" alt="divider" width="199" height="9">
+                <img class="" src="img/divider-2.png" alt="divider" width="199" height="9">
             </div>
             <div class="col-lg-3 col-sm-6">
                 <a class="ingredient-box" href="javascript:return false;">
