--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/fontawesome.css"
           integrity="sha384-4aon80D8rXCGx9ayDt85LbyUHeMWd3UiBaWliBlJ53yzm9hqN21A+o1pqoyK04h+" crossorigin="anonymous">
 
+    <meta property="og:url"           content="https://www.betterbitters.de/" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="Better Bitters" />
+    <meta property="og:description"   content="Better Bitters Cocktail Bitters - Your Drinks Deserve Better" />
+    <meta property="og:image"         content="img/opengraph-preview.jpg" />
+    <meta property="og:image:width"   content="1200" />
+    <meta property="og:image:height"  content="630" />
+    <meta name="twitter:card"         content="summary_large_image">
+
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
