--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <section class="page-section bitter" id="bitter-x" style="background-color: #f8f8f8">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-6 col-sm-4 offset-sm-2 offset-lg-0 col-lg-3">
+            <div class="col-6 col-sm-4 offset-sm-2 offset-lg-0 col-lg-3 p-0">
                 <a class="ingredient-box js-scroll-trigger" href="#bitter-1">
                     <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="tonka bean">
                     <div class="ingredient-box-caption">
@@ -182,7 +182,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-6 col-sm-4 col-lg-3">
+            <div class="col-6 col-sm-4 col-lg-3 p-0">
                 <a class="ingredient-box js-scroll-trigger" href="#bitter-2">
                     <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="tonka bean">
                     <div class="ingredient-box-caption">
@@ -190,7 +190,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-6 col-sm-4 offset-sm-2 offset-lg-0 col-lg-3">
+            <div class="col-6 col-sm-4 offset-sm-2 offset-lg-0 col-lg-3 p-0">
                 <a class="ingredient-box js-scroll-trigger" href="#bitter-3">
                     <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="tonka bean">
                     <div class="ingredient-box-caption">
@@ -198,7 +198,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-6 col-sm-4 col-lg-3">
+            <div class="col-6 col-sm-4 col-lg-3 p-0">
                 <a class="ingredient-box js-scroll-trigger" href="#bitter-4">
                     <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="tonka bean">
                     <div class="ingredient-box-caption">
