--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:url"           content="https://www.betterbitters.de/" />
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="Better Bitters" />
-    <meta property="og:description"   content="Better Bitters Cocktail Bitters - Your Drinks Deserve Better" />
+    <meta property="og:description"   content="Your Drinks Deserve Better - Cocktail Bitters" />
     <meta property="og:image"         content="img/opengraph-preview.jpg" />
     <meta property="og:image:width"   content="1200" />
     <meta property="og:image:height"  content="630" />
