--- a/impressum.html
+++ b/impressum.html
@@ -1,1 +1,218 @@
-coming soon
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Better Bitters - Your Drinks Deserve Better</title>
+
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/solid.css"
+          integrity="sha384-r/k8YTFqmlOaqRkZuSiE9trsrDXkh07mRaoGBMoDcmA58OHILZPsk29i2BsFng1B" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/regular.css"
+          integrity="sha384-IG162Tfx2WTn//TRUi9ahZHsz47lNKzYOp0b6Vv8qltVlPkub2yj9TVwzNck6GEF" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/brands.css"
+          integrity="sha384-BKw0P+CQz9xmby+uplDwp82Py8x1xtYPK3ORn/ZSoe6Dk3ETP59WCDnX+fI1XCKK" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/fontawesome.css"
+          integrity="sha384-4aon80D8rXCGx9ayDt85LbyUHeMWd3UiBaWliBlJ53yzm9hqN21A+o1pqoyK04h+" crossorigin="anonymous">
+
+    <meta property="og:url" content="https://www.betterbitters.de/"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Better Bitters"/>
+    <meta property="og:description" content="Your Drinks Deserve Better - Cocktail Bitters"/>
+    <meta property="og:image" content="img/opengraph-preview.jpg"/>
+    <meta property="og:image:width" content="1200"/>
+    <meta property="og:image:height" content="630"/>
+    <meta name="twitter:card" content="summary_large_image">
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Serif:400,700" rel="stylesheet">
+
+    <!-- Theme CSS - Includes Bootstrap -->
+    <link href="css/creative.css" rel="stylesheet">
+</head>
+
+<body id="page-top">
+
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+    <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+            <img src="img/logo/logo-text-white.png" width="150" height="30" alt="Better Bitters">
+        </a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto my-2 my-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/#bitters">Bitters</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="recipes.html">Recipes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!-- Masthead -->
+<header class="masthead" data-parallax="scroll" data-image-src="img/bg-masthead-3.jpg">
+    <div class="container h-100">
+        <div class="row h-100 "> <!-- align-items-center justify-content-center text-center -->
+            <div class="col-lg-10 align-self-end">
+                <!--            <img src="img/logo/logo-white-full.png" width="500">-->
+                <h1 class="text-white">
+                    Your Drinks<br/>
+                    Deserve <img src="img/logo/logo-text-white.png" height="40" class="logo" alt="Better Bitters"><br/>
+                </h1>
+                <img src="img/divider.png" class="mb-5" alt=""><br/>
+            </div>
+            <div class="col-lg-8 align-self-baseline">
+            </div>
+        </div>
+    </div>
+</header>
+
+<section class="page-section" id="impressum">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-6 business-card"></div>
+            <div class="col-6 py-5 my-5">
+                <h2>Contact us</h2>
+                <img src="img/divider-2.png" class="mb-5" alt=""><br/>
+                <h5>
+                    Better Bitters<br>
+                    c/o Melanie Möller<br>
+                    Maybachufer 40<br>
+                    12047 Berlin<br>
+                    Germany
+                </h5>
+                <!--                <p>+61 (0) 3 8376 6284</p>-->
+                <p><a href="mailto:contact@betterbitters.de">contact@betterbitters.de</a></p>
+            </div>
+        </div>
+        <div class="row">
+            <iframe width="100%" height="500" id="gmap_canvas"
+                    src="https://maps.google.com/maps?q=Maybachufer%2040&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col py-5">
+                    <h1>Impressum</h1>
+
+                    <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
+                    <p>Melanie M&ouml;ller<br/>
+                        Better Bitters<br/>
+                        Maybachufer 40<br/>
+                        12047 Berlin</p>
+
+                    <h2>Kontakt</h2>
+                    <p>Telefon: 01704909136<br/>
+                        E-Mail: contact@betterbitters.de</p>
+
+                    <h2>Verbraucher&shy;streit&shy;beilegung/Universal&shy;schlichtungs&shy;stelle</h2>
+                    <p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer
+                        Verbraucherschlichtungsstelle teilzunehmen.</p>
+
+                    <h3>Haftung f&uuml;r Inhalte</h3>
+                    <p>Als Diensteanbieter sind wir gem&auml;&szlig; &sect; 7 Abs.1 TMG f&uuml;r eigene Inhalte auf diesen
+                        Seiten nach den allgemeinen Gesetzen verantwortlich. Nach &sect;&sect; 8 bis 10 TMG sind wir als
+                        Diensteanbieter jedoch nicht verpflichtet, &uuml;bermittelte oder gespeicherte fremde Informationen
+                        zu &uuml;berwachen oder nach Umst&auml;nden zu forschen, die auf eine rechtswidrige T&auml;tigkeit
+                        hinweisen.</p>
+                    <p>Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen
+                        Gesetzen bleiben hiervon unber&uuml;hrt. Eine diesbez&uuml;gliche Haftung ist jedoch erst ab dem
+                        Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung m&ouml;glich. Bei Bekanntwerden von
+                        entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
+                    <h3>Haftung f&uuml;r Links</h3>
+                    <p>Unser Angebot enth&auml;lt Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss
+                        haben. Deshalb k&ouml;nnen wir f&uuml;r diese fremden Inhalte auch keine Gew&auml;hr &uuml;bernehmen.
+                        F&uuml;r die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der
+                        Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf m&ouml;gliche
+                        Rechtsverst&ouml;&szlig;e &uuml;berpr&uuml;ft. Rechtswidrige Inhalte waren zum Zeitpunkt der
+                        Verlinkung nicht erkennbar.</p>
+                    <p>Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte
+                        einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige
+                        Links umgehend entfernen.</p>
+                    <h3>Urheberrecht</h3>
+                    <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem
+                        deutschen Urheberrecht. Die Vervielf&auml;ltigung, Bearbeitung, Verbreitung und jede Art der
+                        Verwertung au&szlig;erhalb der Grenzen des Urheberrechtes bed&uuml;rfen der schriftlichen Zustimmung
+                        des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur f&uuml;r den
+                        privaten, nicht kommerziellen Gebrauch gestattet.</p>
+                    <p>Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte
+                        Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie
+                        trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden
+                        Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend
+                        entfernen.</p>
+
+                    <p>Quelle: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Contact Section -->
+<footer class="page-section" id="contact">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-8 text-center py-5">
+                <img src="img/logo/logo-circle.png" class="logo img-fluid" alt="Better Bitters Logo" width="300"
+                     height="300"><br/>
+                <img src="img/divider.png" alt=""><br/>
+            </div>
+        </div>
+        <div class="row">
+            <!--            <div class="col-lg-4 ml-auto text-center">-->
+            <!--                <i class="fas fa-phone fa-3x mb-3"></i>-->
+            <!--                <div>+1 (202) 555-0149</div>-->
+            <!--            </div>-->
+            <div class="col-lg-4 offset-lg-4 mr-auto text-center">
+                <a class="d-block" href="mailto:contact@betterbitters.de">
+                    <i class="fas fa-envelope fa-3x mb-3"></i><br>
+                    contact@betterbitters.de
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-5 pb-3">
+        <div class="small text-center">
+            Copyright &copy; 2019-2020 - Better Bitters. All Rights Reserved.
+            <a href="impressum.html">Impressum</a>
+        </div>
+    </div>
+</footer>
+
+<!-- Bootstrap core JavaScript -->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+<!-- Plugin JavaScript -->
+<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+<!-- Custom scripts for this template -->
+<script src="js/parallax.min.js"></script>
+<script src="js/creative.min.js"></script>
+
+</body>
+
+</html>
