add recipe button

--- a/index.html
+++ b/index.html
@@ -272,6 +272,12 @@
                             &nbsp;
                             Buy now on eBay
                         </a>
+                        <a class="btn btn-block btn-outline-info btn-xl mt-3"
+                           href="recipes.html#bitter-1">
+                            <i class="fas fa-cocktail"></i>
+                            &nbsp;
+                            Check out recipes
+                        </a>
                     </div>
                 </div>
 
@@ -397,6 +403,12 @@
                             <i class="fas fa-cart-plus"></i>
                             &nbsp;
                             Buy now on eBay
+                        </a>
+                        <a class="btn btn-block btn-outline-info btn-xl mt-3"
+                           href="recipes.html#bitter-2">
+                            <i class="fas fa-cocktail"></i>
+                            &nbsp;
+                            Check out recipes
                         </a>
                     </div>
                 </div>
