--- a/impressum.html
+++ b/impressum.html
@@ -93,8 +93,8 @@
 <section class="page-section" id="impressum">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-6 business-card"></div>
-            <div class="col-6 py-5 my-5">
+            <div class="col-sm-6 business-card order-2 order-sm-1" style="min-height: 300px"></div>
+            <div class="col-sm-6 py-5 my-5 order-1 order-sm-2">
                 <h2>Contact us</h2>
                 <img src="img/divider-2.png" class="mb-5" alt=""><br/>
                 <h5>
