--- a/impressum.html
+++ b/impressum.html
@@ -45,7 +45,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <a class="navbar-brand js-scroll-trigger" href="/">
             <img src="img/logo/logo-text-white.png" width="150" height="30" alt="Better Bitters">
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
