--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="row">
             <div class="col-6 col-sm-4 offset-sm-2 offset-lg-0 col-lg-3 p-0">
                 <a class="ingredient-box js-scroll-trigger" href="#bitter-1">
-                    <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="tonka bean">
+                    <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="szechuan coffee">
                     <div class="ingredient-box-caption">
                         <div class="ingredient-name text-white-50 pb-2">Szechuan Coffee</div>
                     </div>
@@ -184,7 +184,7 @@
             </div>
             <div class="col-6 col-sm-4 col-lg-3 p-0">
                 <a class="ingredient-box js-scroll-trigger" href="#bitter-2">
-                    <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="tonka bean">
+                    <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="tonka cocoa">
                     <div class="ingredient-box-caption">
                         <div class="ingredient-name text-white-50 pb-2">Tonka Cocoa</div>
                     </div>
@@ -192,7 +192,7 @@
             </div>
             <div class="col-6 col-sm-4 offset-sm-2 offset-lg-0 col-lg-3 p-0">
                 <a class="ingredient-box js-scroll-trigger" href="#bitter-3">
-                    <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="tonka bean">
+                    <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="thai herbs">
                     <div class="ingredient-box-caption">
                         <div class="ingredient-name text-white-50 pb-2">Thai Herbs</div>
                     </div>
@@ -200,7 +200,7 @@
             </div>
             <div class="col-6 col-sm-4 col-lg-3 p-0">
                 <a class="ingredient-box js-scroll-trigger" href="#bitter-4">
-                    <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="tonka bean">
+                    <img class="img-fluid py-4" src="img/products/bottle-2.png" height="350" alt="chai curcuma">
                     <div class="ingredient-box-caption">
                         <div class="ingredient-name text-white-50 pb-2">Chai Curcuma</div>
                     </div>
@@ -217,6 +217,8 @@
         </h2>
     </div>
 </section>
+
+<!-- Bitter 1 -->
 
 <section class="page-section bitter" id="bitter-1">
     <div class="container-fluid">
@@ -350,6 +352,8 @@
     </div>
 </section>
 
+<!-- Bitter 2 -->
+
 <section class="page-section bitter" id="bitter-2">
     <div class="container-fluid">
         <div class="row">
@@ -466,6 +470,266 @@
                             Nutmeg is the seed of several species of the genus Myristica. Myristica
                             fragrans (fragrant nutmeg or true nutmeg) is a dark-leaved evergreen tree cultivated for two
                             spices derived from its fruit: nutmeg, from its seed, and mace, from the seed covering.
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Bitter 3 -->
+
+<section class="page-section bitter" id="bitter-3">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-3 map align-items-center justify-content-center text-center pt-5">
+                <h2 class="mb-3">Thai Herbs</h2>
+                <img class="" src="img/divider-2.png" alt="divider" width="199" height="9">
+                <hr class="no-line mb-5 pb-5">
+            </div>
+            <div class="col-lg-9 bitter align-items-center justify-content-center text-center">
+
+                <div class="row pt-5">
+                    <div class="col-md-5 pb-5 pr-5">
+                        <img src="img/products/bottle-2.png" class="img-fluid" alt="">
+                    </div>
+                    <div class="col-md-6 pb-5">
+                        <h2 class="mb-3">A Modern Classic</h2>
+                        <img class="" src="img/divider-2.png" alt="divider" width="199" height="9">
+                        <hr class="no-line mb-0">
+                        <div class="product details">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat dolor sit amet.
+                            </p>
+                            <ul class="product details">
+                                <li>Lorem ipsum dolor sit amet</li>
+                                <li>consectetur adipisicing elit, sed do eiusmod tempor</li>
+                                <li>incididunt ut labore et dolore magna aliqua</li>
+                                <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco</li>
+                                <li>laboris nisi ut aliquip ex ea commodo consequat dolor sit amet</li>
+                            </ul>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut.
+                            </p>
+                        </div>
+
+                        <div style="text-align:left;" class="mb-2 mt-4">
+                            <span class="currency discounted">15,99€</span>
+                            <span class="currency undiscounted">17,99€</span>
+                            <span class="discount">13% Online-Rabatt</span><br/>
+                            <div class="delivery mb-3">
+                                <i class="fas fa-tag"></i>
+                                (17,77€ / 100ml)
+                                zzgl. Versandkosten
+                            </div>
+                        </div>
+
+                        <a class="btn btn-block btn-warning btn-xl mt-3"
+                           href="https://startbootstrap.com/themes/creative/">
+                            <i class="fas fa-cart-plus"></i>
+                            &nbsp;
+                            Buy now on eBay
+                        </a>
+                        <a class="btn btn-block btn-outline-info btn-xl mt-3"
+                           href="recipes.html#bitter-1">
+                            <i class="fas fa-cocktail"></i>
+                            &nbsp;
+                            Check out recipes
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="ingredients">
+    <div class="container-fluid p-0">
+        <div class="row no-gutters">
+            <div class="col-lg-3 col-sm-6 align-items-center justify-content-center text-center my-auto pt-5 pb-5">
+                <h2>Highlights</h2>
+                <img class="" src="img/divider-2.png" alt="divider" width="199" height="9">
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <a class="ingredient-box" href="javascript:return false;">
+                    <img class="img-fluid" src="img/ingredients/timut.jpg" height="350" alt="sichuan pepper">
+                    <div class="ingredient-box-caption">
+                        <div class="ingredient-name text-white-50 pb-2">
+                            Szechuan Pepper
+                        </div>
+                        <div class="ingredient-description px-4 text-justify">
+                            Sichuan pepper is a spice from the Sichuan cuisine of China's southwestern Sichuan Province.
+                            It's unique aroma and flavor is neither hot like chili peppers nor pungent like black
+                            pepper. Instead, it has slight lemony overtones and creates a tingly numbness in the mouth.
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <a class="ingredient-box" href="javascript:return false;">
+                    <img class="img-fluid" src="img/ingredients/coffee.jpg" height="350" width="350" alt="coffee">
+                    <div class="ingredient-box-caption">
+                        <div class="ingredient-name text-white-50 pb-2">
+                            Coffee Beans
+                        </div>
+                        <div class="ingredient-description px-4 text-justify">
+                            Coffee is darkly colored, bitter, slightly acidic and has a stimulating effect in humans,
+                            primarily due to its caffeine content. It is one of the most popular drinks in the
+                            world, and it can be prepared and presented in a variety of ways.
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <a class="ingredient-box" href="javascript:return false;">
+                    <img class="img-fluid" src="img/ingredients/bergamot-2.jpg" height="350" width="350" alt="bergamot">
+                    <div class="ingredient-box-caption">
+                        <div class="ingredient-name text-white-50 pb-2">
+                            Bergamot
+                        </div>
+                        <div class="ingredient-description px-4 text-justify">
+                            Bergamot is a fragrant citrus fruit from the tropical, Citrus bergamia plant. It is common
+                            throughout the Mediterranean and like other citrus fruits, bergamot has a distinctive, heady
+                            fragrance and flavor.
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="page-section bitter-divider pt-3">
+    <div class="py-4 align-items-center justify-content-center text-center">
+        <h2>
+            <img src="img/divider.png" alt=""><br/>
+        </h2>
+    </div>
+</section>
+
+<!-- Bitter 4 -->
+
+<section class="page-section bitter" id="bitter-4">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-3 map align-items-center justify-content-center text-center pt-5">
+                <h2 class="mb-3">Chai Curcuma</h2>
+                <img class="" src="img/divider-2.png" alt="divider" width="199" height="9">
+                <hr class="no-line mb-5 pb-5">
+            </div>
+            <div class="col-lg-9 bitter align-items-center justify-content-center text-center">
+
+                <div class="row pt-5">
+                    <div class="col-md-5 pb-5 pr-5">
+                        <img src="img/products/bottle-2.png" class="img-fluid" alt="">
+                    </div>
+                    <div class="col-md-6 pb-5">
+                        <h2 class="mb-3">A Modern Classic</h2>
+                        <img class="" src="img/divider-2.png" alt="divider" width="199" height="9">
+                        <hr class="no-line mb-0">
+                        <div class="product details">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat dolor sit amet.
+                            </p>
+                            <ul class="product details">
+                                <li>Lorem ipsum dolor sit amet</li>
+                                <li>consectetur adipisicing elit, sed do eiusmod tempor</li>
+                                <li>incididunt ut labore et dolore magna aliqua</li>
+                                <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco</li>
+                                <li>laboris nisi ut aliquip ex ea commodo consequat dolor sit amet</li>
+                            </ul>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut.
+                            </p>
+                        </div>
+
+                        <div style="text-align:left;" class="mb-2 mt-4">
+                            <span class="currency discounted">15,99€</span>
+                            <span class="currency undiscounted">17,99€</span>
+                            <span class="discount">13% Online-Rabatt</span><br/>
+                            <div class="delivery mb-3">
+                                <i class="fas fa-tag"></i>
+                                (17,77€ / 100ml)
+                                zzgl. Versandkosten
+                            </div>
+                        </div>
+
+                        <a class="btn btn-block btn-warning btn-xl mt-3"
+                           href="https://startbootstrap.com/themes/creative/">
+                            <i class="fas fa-cart-plus"></i>
+                            &nbsp;
+                            Buy now on eBay
+                        </a>
+                        <a class="btn btn-block btn-outline-info btn-xl mt-3"
+                           href="recipes.html#bitter-1">
+                            <i class="fas fa-cocktail"></i>
+                            &nbsp;
+                            Check out recipes
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="ingredients">
+    <div class="container-fluid p-0">
+        <div class="row no-gutters">
+            <div class="col-lg-3 col-sm-6 align-items-center justify-content-center text-center my-auto pt-5 pb-5">
+                <h2>Highlights</h2>
+                <img class="" src="img/divider-2.png" alt="divider" width="199" height="9">
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <a class="ingredient-box" href="javascript:return false;">
+                    <img class="img-fluid" src="img/ingredients/timut.jpg" height="350" alt="sichuan pepper">
+                    <div class="ingredient-box-caption">
+                        <div class="ingredient-name text-white-50 pb-2">
+                            Szechuan Pepper
+                        </div>
+                        <div class="ingredient-description px-4 text-justify">
+                            Sichuan pepper is a spice from the Sichuan cuisine of China's southwestern Sichuan Province.
+                            It's unique aroma and flavor is neither hot like chili peppers nor pungent like black
+                            pepper. Instead, it has slight lemony overtones and creates a tingly numbness in the mouth.
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <a class="ingredient-box" href="javascript:return false;">
+                    <img class="img-fluid" src="img/ingredients/coffee.jpg" height="350" width="350" alt="coffee">
+                    <div class="ingredient-box-caption">
+                        <div class="ingredient-name text-white-50 pb-2">
+                            Coffee Beans
+                        </div>
+                        <div class="ingredient-description px-4 text-justify">
+                            Coffee is darkly colored, bitter, slightly acidic and has a stimulating effect in humans,
+                            primarily due to its caffeine content. It is one of the most popular drinks in the
+                            world, and it can be prepared and presented in a variety of ways.
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <a class="ingredient-box" href="javascript:return false;">
+                    <img class="img-fluid" src="img/ingredients/bergamot-2.jpg" height="350" width="350" alt="bergamot">
+                    <div class="ingredient-box-caption">
+                        <div class="ingredient-name text-white-50 pb-2">
+                            Bergamot
+                        </div>
+                        <div class="ingredient-description px-4 text-justify">
+                            Bergamot is a fragrant citrus fruit from the tropical, Citrus bergamia plant. It is common
+                            throughout the Mediterranean and like other citrus fruits, bergamot has a distinctive, heady
+                            fragrance and flavor.
                         </div>
                     </div>
                 </a>
