--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/fontawesome.css"
           integrity="sha384-4aon80D8rXCGx9ayDt85LbyUHeMWd3UiBaWliBlJ53yzm9hqN21A+o1pqoyK04h+" crossorigin="anonymous">
 
-    <meta property="og:url"           content="https://www.betterbitters.de/" />
-    <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="Better Bitters" />
-    <meta property="og:description"   content="Your Drinks Deserve Better - Cocktail Bitters" />
-    <meta property="og:image"         content="img/opengraph-preview.jpg" />
-    <meta property="og:image:width"   content="1200" />
-    <meta property="og:image:height"  content="630" />
-    <meta name="twitter:card"         content="summary_large_image">
+    <meta property="og:url" content="https://www.betterbitters.de/"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Better Bitters"/>
+    <meta property="og:description" content="Your Drinks Deserve Better - Cocktail Bitters"/>
+    <meta property="og:image" content="img/opengraph-preview.jpg"/>
+    <meta property="og:image:width" content="1200"/>
+    <meta property="og:image:height" content="630"/>
+    <meta name="twitter:card" content="summary_large_image">
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
@@ -508,20 +508,19 @@
                         <hr class="no-line mb-0">
                         <div class="product details">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat dolor sit amet.
+                                This tiny bottle delivers you our love for a countries culinary specialties and
+                                celebrates its incomparable taste. For everyone who had the chance to try Thai food
+                                knows that the perfectly nuanced combination of flavors feels like an explosion in your
+                                mouth.
                             </p>
-                            <ul class="product details">
-                                <li>Lorem ipsum dolor sit amet</li>
-                                <li>consectetur adipisicing elit, sed do eiusmod tempor</li>
-                                <li>incididunt ut labore et dolore magna aliqua</li>
-                                <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco</li>
-                                <li>laboris nisi ut aliquip ex ea commodo consequat dolor sit amet</li>
-                            </ul>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut.
+                                For those people who never tried it, this cocktail bitter will bring you a balanced
+                                flavored mix right in your drink. Just lemon isn't bad.
+                            </p>
+                            <p>
+                                But why not making it even Better? Just a few dashes of the combined secrets in Thai
+                                herbs brings you a fucking good drink with a subtle spiciness of Thai chili, the
+                                freshness of kaffir lime and the interesting sweet licorice bites of Thai basil.
                             </p>
                         </div>
 
@@ -565,45 +564,49 @@
             </div>
             <div class="col-lg-3 col-sm-6">
                 <a class="ingredient-box" href="javascript:return false;">
-                    <img class="img-fluid" src="img/ingredients/timut.jpg" height="350" alt="sichuan pepper">
+                    <img class="img-fluid" src="img/ingredients/cilantro.jpg" height="350" alt="cilantro">
                     <div class="ingredient-box-caption">
                         <div class="ingredient-name text-white-50 pb-2">
-                            Szechuan Pepper
+                            Cilantro
                         </div>
                         <div class="ingredient-description px-4 text-justify">
-                            Sichuan pepper is a spice from the Sichuan cuisine of China's southwestern Sichuan Province.
-                            It's unique aroma and flavor is neither hot like chili peppers nor pungent like black
-                            pepper. Instead, it has slight lemony overtones and creates a tingly numbness in the mouth.
+                            Fun fact: cilantro (or coriander) is perceived by most people to have a tart-like, lemon /
+                            lime taste. To nearly a quarter of people however, the leaves taste like dish soap, linked
+                            to a gene which
+                            detects some specific aldehydes that are also used as odorant substances in many soaps and
+                            detergents.
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-3 col-sm-6">
                 <a class="ingredient-box" href="javascript:return false;">
-                    <img class="img-fluid" src="img/ingredients/coffee.jpg" height="350" width="350" alt="coffee">
+                    <img class="img-fluid" src="img/ingredients/ginger.jpg" height="350" width="350" alt="ginger">
                     <div class="ingredient-box-caption">
                         <div class="ingredient-name text-white-50 pb-2">
-                            Coffee Beans
+                            Ginger
                         </div>
                         <div class="ingredient-description px-4 text-justify">
-                            Coffee is darkly colored, bitter, slightly acidic and has a stimulating effect in humans,
-                            primarily due to its caffeine content. It is one of the most popular drinks in the
-                            world, and it can be prepared and presented in a variety of ways.
+                            Ginger (Zingiber officinale) is a flowering plant whose rhizome, ginger root or ginger, is
+                            widely used as a spice and a folk medicine. It is a herbaceous perennial which grows
+                            annual pseudostems (false stems made of the rolled bases of leaves) about one meter tall
+                            bearing narrow leaf blades.
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-3 col-sm-6">
                 <a class="ingredient-box" href="javascript:return false;">
-                    <img class="img-fluid" src="img/ingredients/bergamot-2.jpg" height="350" width="350" alt="bergamot">
+                    <img class="img-fluid" src="img/ingredients/lemongrass-2.jpg" height="350" width="350"
+                         alt="lemongrass">
                     <div class="ingredient-box-caption">
                         <div class="ingredient-name text-white-50 pb-2">
-                            Bergamot
+                            Lemongrass
                         </div>
                         <div class="ingredient-description px-4 text-justify">
-                            Bergamot is a fragrant citrus fruit from the tropical, Citrus bergamia plant. It is common
-                            throughout the Mediterranean and like other citrus fruits, bergamot has a distinctive, heady
-                            fragrance and flavor.
+                            Cymbopogon citratus, commonly known as West Indian lemon grass or simply lemon grass, is
+                            a tropical plant native to Maritime Southeast Asia and introduced to many tropical
+                            regions.
                         </div>
                     </div>
                 </a>
