--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                             <p>
                                 But why not making it even Better? Just a few dashes of the combined secrets in Thai
                                 herbs brings you a fucking good drink with a subtle spiciness of Thai chili, the
-                                freshness of kaffir lime and the interesting sweet licorice bites of Thai basil.
+                                freshness of lemongrass and the interesting sweet licorice bites of Thai basil.
                             </p>
                         </div>
 
@@ -564,33 +564,32 @@
             </div>
             <div class="col-lg-3 col-sm-6">
                 <a class="ingredient-box" href="javascript:return false;">
-                    <img class="img-fluid" src="img/ingredients/cilantro.jpg" height="350" alt="cilantro">
+                    <img class="img-fluid" src="img/ingredients/chili.jpg" height="350" alt="thai chili">
                     <div class="ingredient-box-caption">
                         <div class="ingredient-name text-white-50 pb-2">
-                            Cilantro
+                            Thai Chili
                         </div>
                         <div class="ingredient-description px-4 text-justify">
-                            Fun fact: cilantro (or coriander) is perceived by most people to have a tart-like, lemon /
-                            lime taste. To nearly a quarter of people however, the leaves taste like dish soap, linked
-                            to a gene which
-                            detects some specific aldehydes that are also used as odorant substances in many soaps and
-                            detergents.
+                            Bird's eye chili, bird eye chili, bird's chili, or Thai chili is a chili pepper, a variety
+                            from the species Capsicum annuum, commonly found in Ethiopia and across Southeast Asia. It
+                            is used extensively in many Asian cuisines. Its fruits characteristically point upwards.
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-3 col-sm-6">
                 <a class="ingredient-box" href="javascript:return false;">
-                    <img class="img-fluid" src="img/ingredients/ginger.jpg" height="350" width="350" alt="ginger">
+                    <img class="img-fluid" src="img/ingredients/thai-basil.jpg" height="350" width="350"
+                         alt="lemongrass">
                     <div class="ingredient-box-caption">
                         <div class="ingredient-name text-white-50 pb-2">
-                            Ginger
+                            Thai Basil
                         </div>
                         <div class="ingredient-description px-4 text-justify">
-                            Ginger (Zingiber officinale) is a flowering plant whose rhizome, ginger root or ginger, is
-                            widely used as a spice and a folk medicine. It is a herbaceous perennial which grows
-                            annual pseudostems (false stems made of the rolled bases of leaves) about one meter tall
-                            bearing narrow leaf blades.
+                            Thai basil is a type of basil native to Southeast Asia that has been cultivated to provide
+                            distinctive traits. Widely used throughout Southeast Asia, its flavor, described as anise-
+                            and licorice-like and slightly spicy, is more stable under high or extended cooking
+                            temperatures than that of sweet basil.
                         </div>
                     </div>
                 </a>
