--- a/index.html
+++ b/index.html
@@ -374,20 +374,16 @@
                         <hr class="no-line mb-0">
                         <div class="product details">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat dolor sit amet.
+                                When you travel in South America you get to try all those rich flavored beans. For this
+                                bitter, we've combined tonka and cocoa.
                             </p>
-                            <ul class="product details">
-                                <li>Lorem ipsum dolor sit amet</li>
-                                <li>consectetur adipisicing elit, sed do eiusmod tempor</li>
-                                <li>incididunt ut labore et dolore magna aliqua</li>
-                                <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco</li>
-                                <li>laboris nisi ut aliquip ex ea commodo consequat dolor sit amet</li>
-                            </ul>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut.
+                                Addicted to the flavors of both of them, why not bring their unique tastes together in
+                                this high octane alcohol and let your drinks taste even better? Yes exactly, why not?
+                            </p>
+                            <p>
+                                That's what you'll get in 90ml of selected spices and herbs. A rich and balanced taste
+                                of velvety sweetness meets expressive noble bitterness.
                             </p>
                         </div>
 
@@ -701,45 +697,47 @@
             </div>
             <div class="col-lg-3 col-sm-6">
                 <a class="ingredient-box" href="javascript:return false;">
-                    <img class="img-fluid" src="img/ingredients/timut.jpg" height="350" alt="sichuan pepper">
+                    <img class="img-fluid" src="img/ingredients/mixed-spices.jpg" height="350" alt="Chai spices">
                     <div class="ingredient-box-caption">
                         <div class="ingredient-name text-white-50 pb-2">
-                            Szechuan Pepper
+                            Chai Spices
                         </div>
                         <div class="ingredient-description px-4 text-justify">
-                            Sichuan pepper is a spice from the Sichuan cuisine of China's southwestern Sichuan Province.
-                            It's unique aroma and flavor is neither hot like chili peppers nor pungent like black
-                            pepper. Instead, it has slight lemony overtones and creates a tingly numbness in the mouth.
+                            The term "chai" originated from the Hindustani word "chai", which was derived from the
+                            Chinese word for tea, cha. In English, this spiced tea is commonly referred to as masala
+                            chai, or simply chai, even though the term refers to tea in general in the original
+                            language.
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-3 col-sm-6">
                 <a class="ingredient-box" href="javascript:return false;">
-                    <img class="img-fluid" src="img/ingredients/coffee.jpg" height="350" width="350" alt="coffee">
+                    <img class="img-fluid" src="img/ingredients/turmeric.jpg" height="350" width="350" alt="turmeric">
                     <div class="ingredient-box-caption">
                         <div class="ingredient-name text-white-50 pb-2">
-                            Coffee Beans
+                            Turmeric
                         </div>
                         <div class="ingredient-description px-4 text-justify">
-                            Coffee is darkly colored, bitter, slightly acidic and has a stimulating effect in humans,
-                            primarily due to its caffeine content. It is one of the most popular drinks in the
-                            world, and it can be prepared and presented in a variety of ways.
+                            Turmeric is a flowering plant, Curcuma longa of the ginger family, Zingiberaceae, the roots
+                            of which are used in cooking. The plant is a perennial, rhizomatous, herbaceous plant native
+                            to the Indian subcontinent and Southeast Asia, that requires temperatures between 20 and 30
+                            °C and a considerable amount of annual rainfall to thrive.
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-3 col-sm-6">
                 <a class="ingredient-box" href="javascript:return false;">
-                    <img class="img-fluid" src="img/ingredients/bergamot-2.jpg" height="350" width="350" alt="bergamot">
+                    <img class="img-fluid" src="img/ingredients/cardamom.jpg" height="350" width="350" alt="cardamom">
                     <div class="ingredient-box-caption">
                         <div class="ingredient-name text-white-50 pb-2">
-                            Bergamot
+                            Cardamom
                         </div>
                         <div class="ingredient-description px-4 text-justify">
-                            Bergamot is a fragrant citrus fruit from the tropical, Citrus bergamia plant. It is common
-                            throughout the Mediterranean and like other citrus fruits, bergamot has a distinctive, heady
-                            fragrance and flavor.
+                            Cardamom, is a spice made from the seeds of several plants in the genera Elettaria and
+                            Amomum in the family Zingiberaceae. Both genera are native to the Indian subcontinent and
+                            Indonesia. They are recognized by their small seed pods.
                         </div>
                     </div>
                 </a>
